Fixed data generation script. Fixed data feature subsetting script -- also added a .java script for feature subsetting.